# qiuzhi-api

./: .env.example  .gitignore  README.md  deploy-guide.md  main.py  pyproject.toml  requirements.txt
static/: index.html  index.html - 快捷方式.lnk
